--- a/index.html
+++ b/index.html
@@ -40,22 +40,29 @@
   </div>
   <script>
     let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
-    let clickCount = 0, fraseIndex = 0, gotas = [];
-    let mostrarDedicatoria = false, musicaIniciada = false;
-    let mensajeFinalizado = false, mensajeTerminado = false;
+    let clickCount = 0;
+    let fraseIndex = 0;
+    let gotas = [];
+    let mostrarDedicatoria = false;
+    let mensajeFinalizado = false;
+    let musicaIniciada = false;
 
     let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te esté yendo bastante bien :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá poder reencontrarnos muy pronto ... Pero en fin, yo me despido y espero la pases bien en este día que es tan especial para ti :D, tu amigo Caleb ;)...";
-
     let textoVisible = "";
-    let indexLetra = 0, tiempoEscritura = 0, velocidadEscritura = 100;
-    let borrando = false, borrarDesde = null;
+    let indexLetra = 0;
+    let tiempoEscritura = 0;
+    let velocidadEscritura = 100;
+    let borrando = false;
+    let borrarDesde = null;
+    let esperando = false;
+    let tiempoEspera = 0;
     let borrandoFinal = false;
-
-    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
+    let mensajeTerminado = false;
+    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"]; // Rosa, fucsia, violeta
 
     let partesABorrar = [
-      { texto: "Se te quiere", borrado: false, esperando: false, tiempo: 0 },
-      { texto: "Se te extraña", borrado: false, esperando: false, tiempo: 0 }
+      { texto: "Se te quiere", borrado: false },
+      { texto: "Se te extraña", borrado: false }
     ];
 
     let particulas = [];
@@ -73,7 +80,8 @@
 
     function mousePressed() {
       if (!musicaIniciada) {
-        document.getElementById("bgMusic").play();
+        let audio = document.getElementById("bgMusic");
+        audio.play();
         musicaIniciada = true;
       }
 
@@ -81,7 +89,9 @@
         clickCount++;
         if (clickCount % 2 === 0) {
           fraseIndex = (fraseIndex + 1) % frases.length;
-          for (let g of gotas) g.texto = frases[fraseIndex];
+          for (let g of gotas) {
+            g.texto = frases[fraseIndex];
+          }
         }
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
@@ -123,8 +133,10 @@
       for (let p of particulas) {
         p.x += p.dx;
         p.y += p.dy;
+
         if (p.x < 0 || p.x > width) p.dx *= -1;
         if (p.y < 0 || p.y > height) p.dy *= -1;
+
         fill(p.color + hex(p.alpha, 2));
         noStroke();
         ellipse(p.x, p.y, p.size);
@@ -133,13 +145,19 @@
 
     function draw() {
       background(0, 100);
-      if (mostrarDedicatoria) moverYdibujarParticulas();
 
+      // Fondo de partículas si estamos en dedicatoria
+      if (mostrarDedicatoria) {
+        moverYdibujarParticulas();
+      }
+
+      // Contador de clics
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
+      // Lluvia de frases
       if (!mostrarDedicatoria) {
         textAlign(CENTER, CENTER);
         textSize(24);
@@ -147,40 +165,58 @@
           let x = random(width);
           let y = -30;
           let speed = random(2, 4);
-          gotas.push({ x, y, speed, alpha: 255, texto: frases[fraseIndex], explosion: false });
+          gotas.push({
+            x: x,
+            y: y,
+            speed: speed,
+            alpha: 255,
+            texto: frases[fraseIndex],
+            explosion: false
+          });
         }
+
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
           let color = random(coloresTexto);
           fill(color + hex(g.alpha, 2));
           text(g.texto, g.x, g.y);
+
           if (g.explosion) {
-            g.x += g.dx; g.y += g.dy; g.alpha -= 5;
+            g.x += g.dx;
+            g.y += g.dy;
+            g.alpha -= 5;
           } else {
-            g.y += g.speed; g.alpha -= 1.5;
+            g.y += g.speed;
+            g.alpha -= 1.5;
           }
-          if (g.alpha <= 0 || g.y > height + 50) gotas.splice(i, 1);
+
+          if (g.alpha <= 0 || g.y > height + 50) {
+            gotas.splice(i, 1);
+          }
         }
       }
 
-      if (mostrarDedicatoria) {
-        if (!borrando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
-          textoVisible += textoBase[indexLetra++];
+      // Dedicatoria con máquina de escribir y borrado
+      if (mostrarDedicatoria && !borrandoFinal) {
+        if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
+          textoVisible += textoBase[indexLetra];
+          indexLetra++;
           tiempoEscritura = millis();
         }
 
         for (let parte of partesABorrar) {
-          if (!parte.borrado && !parte.esperando && textoVisible.includes(parte.texto)) {
-            parte.tiempo = millis();
-            parte.esperando = true;
+          if (!parte.borrado && textoVisible.includes(parte.texto)) {
             borrarDesde = textoVisible.lastIndexOf(parte.texto);
-          }
-          if (parte.esperando && millis() - parte.tiempo >= 500) {
+            esperando = true;
+            tiempoEspera = millis();
             parte.borrado = true;
-            parte.esperando = false;
-            borrando = true;
             break;
           }
+        }
+
+        if (esperando && millis() - tiempoEspera >= 1300) {
+          borrando = true;
+          esperando = false;
         }
 
         if (borrando && millis() - tiempoEscritura > velocidadEscritura) {
@@ -191,7 +227,7 @@
           }
         }
 
-        if (!borrando && indexLetra >= textoBase.length && !mensajeFinalizado) {
+        if (!borrando && indexLetra >= textoBase.length && !esperando && !mensajeFinalizado) {
           mensajeFinalizado = true;
           setTimeout(() => {
             borrandoFinal = true;
@@ -204,6 +240,7 @@
           tiempoEscritura = millis();
         }
 
+        // 💡 Corregido aquí
         let dedicatoriaHTML = "";
         for (let c of textoVisible) {
           let color = random(coloresTexto);
