--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 
     let particulas = [];
 
+    // Array para almacenar el color actual de cada letra en la dedicatoria
+    let coloresPorLetra = [];
+
     function setup() {
       createCanvas(windowWidth, windowHeight);
       textSize(26);
@@ -196,7 +199,7 @@
         }
       }
 
-      // Dedicatoria con máquina de escribir y borrado
+      // Dedicatoria con máquina de escribir y borrado y cambio dinámico de color
       if (mostrarDedicatoria && !borrandoFinal) {
         if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
@@ -240,11 +243,23 @@
           tiempoEscritura = millis();
         }
 
-        // 💡 Corregido aquí
+        // Actualiza el array de colores para que coincida con la longitud del texto visible
+        while (coloresPorLetra.length < textoVisible.length) {
+          coloresPorLetra.push(random(coloresTexto));
+        }
+        while (coloresPorLetra.length > textoVisible.length) {
+          coloresPorLetra.pop();
+        }
+
+        // Cambia el color de cada letra en cada frame para efecto dinámico
+        for (let i = 0; i < coloresPorLetra.length; i++) {
+          coloresPorLetra[i] = random(coloresTexto);
+        }
+
+        // Renderiza la dedicatoria con colores dinámicos
         let dedicatoriaHTML = "";
-        for (let c of textoVisible) {
-          let color = random(coloresTexto);
-          dedicatoriaHTML += `<span style="color:${color}">${c}</span>`;
+        for (let i = 0; i < textoVisible.length; i++) {
+          dedicatoriaHTML += `<span style="color:${coloresPorLetra[i]}">${textoVisible[i]}</span>`;
         }
         document.getElementById("dedicatoria").innerHTML = dedicatoriaHTML;
       }
